canary-deployement/deployement1.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: python-app-v1
  namespace: canary-deployement
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: python-app
        version: "v1"
    spec:
      imagePullSecrets:
        - name: my-registry-key
      containers:
        - name: python-app
          image: nknagaraj/python-app:v1
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
